--- a/themes/sardine/static/css/main.css
+++ b/themes/sardine/static/css/main.css
@@ -192,7 +192,8 @@ code {
     color: var(--coder-emphasis);
 }
 
-table {
+table, tr, td {
+    border-collapse: collapse;
     border: 1px solid;
 }
 
