--- a/themes/sardine/static/css/main.css
+++ b/themes/sardine/static/css/main.css
@@ -193,11 +193,13 @@ code {
 }
 
 table, tr, td {
-    border-collapse: collapse;
+/*     border-collapse: collapse; */
     border: 1px solid;
 }
 
-
+tr:nth-of-type(even) {
+    background-color:#222;
+}
 tr:nth-of-type(odd) {
     background-color:#111;
 }
