--- a/themes/sardine/static/css/main.css
+++ b/themes/sardine/static/css/main.css
@@ -194,7 +194,7 @@ code {
 
 table, tr, td {
 /*     border-collapse: collapse; */
-    border: 1px solid;
+/*     border: 1px solid; */
 }
 
 tr:nth-of-type(even) {
