--- a/themes/sardine/static/css/main.css
+++ b/themes/sardine/static/css/main.css
@@ -196,8 +196,11 @@ table, tr, td {
 /*     border-collapse: collapse; */
 /*     border: 1px solid; */
 }
-td {
-   padding: 4px;
+th, td {
+    padding: 4px;
+}
+thead {
+    visibility: collapse;
 }
 tr:nth-of-type(even) {
     background-color:#222;
